--- a/VectorEditor.UI/VectorEditor.UI.csproj
+++ b/VectorEditor.UI/VectorEditor.UI.csproj
@@ -18,4 +18,8 @@
       <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VectorEditor.Core\VectorEditor.Core.csproj" />
+  </ItemGroup>
 </Project>
